nginx-ws-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx-ws
        image: amit/nginx-ws:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
