springboot-demo1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: springboot-demo1
        image: amit/springboot-demo1:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
